--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
+    <base href="/" />
   </head>
   <body>
     <app-root></app-root>
